update install in readme.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysqlsync",
+  "name": "@gamalielmh921230/mysqlsync",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
