--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@gamalielmh921230/mysqlsync",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node ./test/test.js"
+    "test": "node ./test/test.js",
+    "test2": "node ./test/copyTabla.js"
   },
   "repository": {
     "type": "git",
